<resources>
    <string name="app_name">Donor</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="MakeDonation">MakeDonation</string>
    <string name="Myappointments">My appointments</string>
    <string name="Notification">Notifications</string>
    <string name="Campaigns">Campaigns</string>
    <string name="MyDonations">My Donations</string>
    <string name="Share">Share</string>
    <string name="Aboutus">About us</string>
    <string name="Settings">Settings</string>
    <string name="Logout">Logout</string>
    <string name="staticinfo">Basic info</string>
    <string name="title_activity_aboutus">AboutusActivity</string>
    <string name="LoginButton">LOG IN</string>
    <string name="foregtPassButten">Forgot your password?</string>
    <string name="accountbutten">Do not have an account ?</string>
    <string name="registerbutten">Sign Up</string>
    <string name="dateButten">Date:</string>
    <string name="campaignText">Campaign</string>
    <string name="Fromtext">From:</string>
    <string name="totext">To:</string>
    <string name="basictext">Basic Information</string>
    <string name="donationprobutton">Donation Process</string>
    <string name="canIButten">Can I Donate?</string>
    <string name="beforeBytten">Before Donation</string>
    <string name="afterbutten">After Donation</string>
    <string name="sharetext">Thank you for donating your blood today, which will help patients who are in desperate need to your blood.</string>
    <string name="sharewithtext">Share With</string>
    <string name="settingtext">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notifcation">Notifcatons</string>
    <string name="languagetext">Language</string>
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>
    <string name="btn_display">Display</string>
    <string name="myAppDate">Date:</string>
    <string name="instractionDonation">Instructions For Donation?</string>
    <string name="selectDate">Select Date</string>
    <string name="selectTime">Select Time</string>
    <string name="Confirm">Confirm</string>
    <string name="spare">Spare only</string>
    <string name="minut">15 minutes</string>
    <string name="andsave">and SAVE</string>
    <string name="lives">3 lives</string>
    <string name="mission">Our Mission</string>
    <string name="mission2">To help blood centers serve their communities.</string>
    <string name="help1">Who We Help?</string>
    <string name="donres">Doners</string>
    <string name="donoers1">Blood donors are essential to the blood supply. Kuwait Blood Centers rely on donors like you to help save lives.</string>
    <string name="donate">Donate</string>
    <string name="members">By:
    Mahmoud
    Shikha
    Zainab Karam</string>
    <string name="donationprocess1">How long does it take?
    1- Whole Blood Donation: it takes about 10 minutes
    2- Double red blood cells donation: it takes about 45 minutes
    3- Platelets donation; donation 60 - 9- minutes depending on the height and eight of the donor, platelet count and Hematocrit level</string>
    <string name="donationprocess2">How Often can I give blood?
    1- Whole Blood Donation: every 8 weeks up to 6 times per year
    2- Double red blood cells donation: every 16 weeks up to 3 times per year
    3- Platelets donation: every 2 weeks up to 24 times per year</string>
     <string name="donationprocess3">Who can Donate blood?
    1- Healthy donors whom ages between 17 - 70 Years old
    2- Citizens or residents who have valid residency
    3- Donor’s weight shall be  50 Kg

    How do i need to prepare for the day of donation?
     1- Sleep at least 6-8 hours on the night before the day of donation
     2- Drink plenty of fluids
     3- Have healthy light meals (fat free) on the day of donation
     4- Be in the good health and consult the physician if you are taking any medications that       may interfere with blood donation such as antibiotics or any of the medications on the medications on the medication deferral list (Attached)
    5- Consults the physician if you have any chronic condition or surgery that may affect the your health or affect the safety of blood
    6- Females should not be pregnant nor menstruating, and should wait at least 6 weeks after delivery
    7- You should wait at least 3 days after any dental procedure, before donating blood
    8- Please inform the physician if you had blood transfusion before.</string>
    <string name="canI1">When i can donate again?
A blood donation: every 8 weeks, up to 6 times a year
Two units of red blood cells: every 16 weeks, up to three times a year
Platelets: every two weeks, up to 24 times a year


What are the requirement to donate blood?
1- healthy donors between the age of 17 - 70 years old
2- Citizenc or residents who have a valid residence
3- the donor weight must be at least 50 kg</string>
    <string name="canI2">How to be ready for donation day?

1- Sleeping 6-8 hours at least on the day befor the donation.
2-  Drink plenty of fluids
3- Eating Healthy snacks (fat free) in the day of donation
4- You must be in good health , and in case of taking drugs that can affect the donation process please consult the doctor
5- For women: Not to be pregnant or during the menstrual cycle, it should be at least 6 weeks after giving birth
6- Consult the doctor if you have any chronic illness or if you had an surgery that might affect your health or affect the blood.
7- You must wait at least three days after any procedure with your teeth before donating
8- Please inform your doctor if you had any blood transfusion in the past
9- Please bring your original Civil Id to be valid in the blood donation day</string>
<string name="before1">We would like to express our thanks and gratitude for your cooperation with us by offering the blood bank this meaningful gift to all patients in Kuwait Hospitals. To make your donation valuable for transfusion please follow these instructions:

    1- Sleep at least 6 hours on the day before donation.
    2- Be in good health and avoid certain medications such as:
    a.Aspirin, or products containing aspirin, for at least 5 days before your appointment
    b.Analgesic non - Steroidal, Anti- Inflammatory medications ( such as Ibuprofen ) for 48 hours before your appointment
    c.Antibiotics for at least seven days before your appointment
    d.If you are taking any other medications, please inform the physician

    3- Drink plenty of fluids three to four hours before donating platelets.
    4- Eat healthy light food (fat free), like fruits and vegetables, and do not skip a meal on the day before donation.</string>
<string name="before2">5- On the day of donation, your breakfast shall include: Toast, Jam and Honey, Biscuits without cream.
6- We also suggest that you increase your consumption of Calcium-rich foods (dairy products) or take a Calcium supplement the evening before your donation and also and also the morning of your donation .
7- Wear comfortable clothes with sleeves that can be easily rolled up above the elbow.
8- Apheresis Donation procedure usually takes 60 - 90 minutes, so please go to toilet just before starting donation to avoid interruption of the procedure
9- Refrain from smoking for at least 30 minutes before donation
10- Bring your Civil ID with you on the day of the donation
11- Accuracy and honesty are essential in answering the donor history questionnaire for the safety of blood. All information provided by you will be handled in privacy.

Platelet transfusion is a lifesaving medical treatment for Cancer patients, organ or bone marrow transplant patients, victims of traumatic injuries, and patients undergoing open heart surgeries

“ 70 minutes of your time once every month can save one of these patients”
“Please help by being a regular platelet donor”

Don’t forget to take appointment for your next donation
Thank you</string>
<string name="after1">Thank you for donating your blood today, which will help patients who are in desperate need to your blood.

Are we care about your health, we advise you to read and follow these instructions.
1- Keep laying on donation chair for 5 minutes then stand up slowly, and don’t leave the donation area before being released by your attending nurse.
2- You are welcomed in our refreshment area. The resting period of 15 minutes after blood donation is actually the time to observe you for any possible donor juice before reactions.
3- Drink your juice before leaving. It is important to drink extra fluids in the first 4 hours following donation. Increase fluid intake for the next 3 days to help you restore your body fluid.
4- You should eat iron rich food for the next few days after donation.
5- Do not smoke for the next two hours.
6- Keep your bandage dry and in place for the next 4 hours. If bleeding occurs from vein puncture site, raise your arm above your head and apply moderate pressure to the bleeding site until it stops and replace bandage for additional 4 hours.
7- Avoid heavy lifting strenuous exercise, and hazardous work (e.g construction workers,  Truck drivers of heavy machine operators) for 12 hours. This will help to prevent bruising, improve healing of the needle puncture site, and allowing your body to compensate for the blood loss.
</string>
    <string name="after2">8- If you noticed bruises on vein puncture site, follow these steps:
Day 1: Wrap ice in a clean moist cloth and apply to the site for 15-20 minutes, 3-4 times during the day.
Day 2,3 and 4: Apply a warm moist cloth to the site for 15-20 minutes, 3-4 times every day , you will notice color changes of the bruised area in the next   10 days.
     9-   If you experience dizziness or lightheadedness or feel like you are going to faint, sit
down with your head between your knees or lie down with your legs elevated as soon as possible to avoid a potential fall and/or injury. Remain in this position until the condition improves . If symptoms persist, return to the blood bank or seek medical advice.
    10-  As a part of our routine procedure, the blood bank will test your donation to detect any   blood transmitted infections.
  11- In some instances when the infection is in its early phase (window period), our routine
          tests may fail to reveal the presence of such infection. Therefore, if you have any
          doubts about the safety of your blood, please call the Central Blood Bank at the
          number provided, as soon as possible and tell the physician in charge that you don’t
          want your donation to be used for transfusion without the need to explain or to give
          any reasons. All information provided by you will be confidential.</string>
    <string name="enterEmail">Enter Your Email</string>
    <string name="enteryouremail">Please enter your email here</string>
    <string name="send">Submit</string>
</resources>