<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mhd.donor.MakeDonations">

    <!-- TODO: Update blank fragment layout -->


    <TextView
        android:id="@+id/text_donation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="@string/instractionDonation"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="sans"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Spinner
        android:id="@+id/spinnerSelectDonationType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_donation"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="13dp" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@mipmap/c"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/selectDate"
        android:inputType="date"
        android:layout_marginTop="13dp"
        android:layout_below="@+id/spinnerSelectDonationType"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:id="@+id/spinnerBranches"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:layout_below="@+id/editTextDate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/confirmButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Confirm"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="17dp"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"/>

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/spare"
        android:textColor="#ff0000"
        android:textAlignment="gravity"
        android:textSize="8pt"
        android:fontFamily="serif-monospace"
        android:textStyle="bold"
        android:layout_marginRight="13dp"
        android:layout_marginEnd="13dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minut"
        android:textAlignment="gravity"
        android:textSize="17pt"
        android:textStyle="bold"
        android:fontFamily="serif-monospace"
        android:textColor="@color/material_drawer_dark_background"
        android:layout_below="@+id/textView22"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/andsave"
        android:textColor="#ff0000"
        android:textAlignment="gravity"
        android:textSize="8pt"
        android:fontFamily="serif-monospace"
        android:textStyle="bold"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/textView23"
        android:layout_alignRight="@+id/textView22"
        android:layout_alignEnd="@+id/textView22" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="gravity"
        android:textSize="17pt"
        android:textStyle="bold"
        android:fontFamily="serif-monospace"
        android:text="@string/lives"
        android:textColor="@color/material_drawer_dark_background"
        android:layout_below="@+id/textView24"
        android:layout_alignRight="@+id/textView24"
        android:layout_alignEnd="@+id/textView24" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="169dp"
        android:layout_height="340dp"
        android:layout_alignBottom="@+id/spinnerSelectDonationType"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        app:srcCompat="@mipmap/donationablooooood" />

    <Spinner
        android:id="@+id/spinnerperiod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinnerBranches"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="13dp" />

</RelativeLayout>
