<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mhd.donor.ForgetPassActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/fptoolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fptoolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="47dp"
        android:text="@string/foregtPassButten"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="14pt"
        android:textColor="@color/md_black_1000"
        />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:drawableLeft="@mipmap/message111"
        android:drawablePadding="10dp"
        android:text="@string/enteryouremail"
        android:textAlignment="gravity"
        android:textSize="10pt"
        android:layout_below="@+id/textView20"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/editText"
        android:maxLines="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:background="@drawable/border_edit"
        android:hint="@string/enterEmail"
        android:layout_below="@+id/textView21"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="87dp"
        android:background="@drawable/button_shap"
        android:text="@string/send"
        android:textSize="8pt"
        android:layout_below="@+id/editText"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/civilIDEdit"
        android:maxLines="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editText"
        android:layout_marginTop="19dp"
        android:background="@drawable/border_edit"
        android:ems="10"
        android:hint="Enter Your CivilID"
        android:inputType="textPersonName" />

</RelativeLayout>
