<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mhd.donor.LoginActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/Hometoolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/Emaillll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Password"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="13dp"
        android:ems="10"
        android:hint="Email"
        android:drawableLeft="@mipmap/closeenvelope"
        android:inputType="textEmailAddress"
        android:drawablePadding="10dp"
        />

    <EditText
        android:id="@+id/Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:drawableLeft="@mipmap/password11"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:drawablePadding="10dp"
        />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="MHEALTH"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="50sp"
        android:textStyle="bold"
        android:layout_marginTop="32dp"
        android:layout_below="@+id/Hometoolbar"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/LoginButton"
        android:layout_below="@+id/FP"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/FP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/material_drawer_background"
        android:text="@string/foregtPassButten"
        android:textSize="8sp"
        android:layout_marginTop="11dp"
        android:layout_below="@+id/Password"
        android:layout_alignRight="@+id/textView10"
        android:layout_alignEnd="@+id/textView10" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/donor"
        android:layout_below="@+id/Hometoolbar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/accountbutten"
        android:layout_below="@+id/Login"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/Sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registerbutten"
        android:layout_below="@+id/textView9"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
